--- a/Block2Challenge/index.html
+++ b/Block2Challenge/index.html
@@ -19,9 +19,11 @@
     </p>
 
     <input type="radio" id="auto" name="mode" value="auto">
-    <label for="auto" chacked>auto</label>
+    <label for="auto" checked>auto</label>
+    <br>
     <input type="radio" id="manual" name="mode" value="manual">
-    <label for="manual">manual</label><br>
+    <label for="manual">manual</label>
+    <br>
     
     <label for="min">min:</label>
     <select id="min" name="min" onchange="validateRange('min')">
@@ -47,8 +49,11 @@
       <option value="20">20</option>
       <option value="25" selected>25</option>
     </select>
+    <br>
+
     <button type="button" id="play" onclick="play()">play exercise</button> 
     <br><br>
+    
     <button type="button" id="sharp" onclick="isSharp()">sharp</button> 
     <br>
     <button type="button" id="flat" onclick="isFlat()">flat</button> 
