--- a/Block2Challenge/index.html
+++ b/Block2Challenge/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Block 2 Challenge: Online Aural Intonation Training</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1><a href="../index.html">WDD 330 Portfolio</a></h1>
@@ -19,7 +20,7 @@
     </p>
 
     <input type="radio" id="auto" name="mode" value="auto">
-    <label for="auto" selected>auto</label>
+    <label for="auto" checked="checked">auto</label>
     <br>
     <input type="radio" id="manual" name="mode" value="manual">
     <label for="manual">manual</label>
@@ -37,6 +38,7 @@
       <option value="20">20</option>
       <option value="25" selected>25</option>
     </select>
+    <br>
     <label for="min">min:</label>
     <select id="min" name="min" onchange="validateRange('min')">
       <option value="1">1</option>
