--- a/Block2Challenge/index.html
+++ b/Block2Challenge/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1><a href="../index.html">WDD 330 Portfolio</a></h1>
+    <h1 class="not centered"><a href="../index.html">WDD 330 Portfolio</a></h1>
     <h2>Block 2 Challenge: Free Online Aural Intonation Training</h2>
     <p class="description">
         This is a free resource to develop your aural sense of intonation 
@@ -19,11 +19,11 @@
         sharp or flat.
     </p>
 
-    <input type="radio" id="auto" name="mode" value="auto">
-    <label for="auto" checked="checked">auto</label>
+    <input class="not centered" type="radio" id="auto" name="mode" value="auto">
+    <label class="not centered" for="auto" checked="checked">auto</label>
     <br>
-    <input type="radio" id="manual" name="mode" value="manual">
-    <label for="manual">manual</label>
+    <input class="not centered" type="radio" id="manual" name="mode" value="manual">
+    <label class="not centered" for="manual">manual</label>
     <br><br>
     
     <label for="max">max:</label>
