--- a/Block2Challenge/index.html
+++ b/Block2Challenge/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="center">
     <h1><a href="../index.html">WDD 330 Portfolio</a></h1>
     <h2>Block 2 Challenge: Free Online Aural Intonation Training</h2>
     <p class="description">
@@ -19,17 +18,14 @@
         After pressing play, select if you think the second pitch you hear is 
         sharp or flat.
     </p>
-    </div>
-    <div class="radio">
+
     <input type="radio" id="auto" name="mode" value="auto">
-    <label for="auto" checked="checked">--auto--</label>
+    <label for="auto" checked="checked">auto&nbsp&nbsp</label>
     <br>
     <input type="radio" id="manual" name="mode" value="manual">
     <label for="manual">manual</label>
     <br><br>
-    </div>
-    
-    <div class="center">
+   
     <label for="max">max:</label>
     <select id="max" name="max" onchange="validateRange('max')">
       <option value="1">1</option>
@@ -65,8 +61,7 @@
     <button type="button" id="flat" onclick="isFlat()">flat</button> 
     <br>
     <p id="feedback"></p>
-    </div>
-    
+
     <script>
       // Updated in getSign(), used in isSharp() and isFlat()
       let globalSign = 'u'; 
