--- a/Block2Challenge/index.html
+++ b/Block2Challenge/index.html
@@ -20,7 +20,16 @@
     </p>
 
     <input type="radio" id="auto" name="mode" value="auto">
-    <label for="auto" checked="checked">auto&nbsp&nbsp</label>
+    <label for="auto" checked="checked">auto&zwnj;&zwnj;</label>
+    <br>
+    <input type="radio" id="auto" name="mode" value="auto">
+    <label for="auto" checked="checked">auto&#8205;&#8205;</label>
+    <br>
+    <input type="radio" id="auto" name="mode" value="auto">
+    <label for="auto" checked="checked">auto&nbsp;&nbsp;</label>
+    <br>
+    <input type="radio" id="auto" name="mode" value="auto">
+    <label for="auto" checked="checked">auto<span style="opacity:0;">__</span></label>
     <br>
     <input type="radio" id="manual" name="mode" value="manual">
     <label for="manual">manual</label>
