--- a/Block2Challenge/index.html
+++ b/Block2Challenge/index.html
@@ -19,17 +19,11 @@
         sharp or flat.
     </p>
 
-    <input type="radio" id="auto1" name="mode" value="auto">
-    <label for="auto1" checked="checked">auto&zwnj;&zwnj;</label>
-    <br>
-    <input type="radio" id="auto2" name="mode" value="auto">
-    <label for="auto2" checked="checked">auto&#8205;&#8205;</label>
-    <br>
     <input type="radio" id="auto3" name="mode" value="auto">
-    <label for="auto3" checked="checked">auto&nbsp;&nbsp;</label>
+    <label for="auto3" checked="checked">auto&nbsp;&nbsp;&nbsp;&nbsp;</label>
     <br>
     <input type="radio" id="auto4" name="mode" value="auto">
-    <label for="auto4" checked="checked">auto<span style="opacity:0;">__</span></label>
+    <label for="auto4" checked="checked">auto<span style="opacity:0;">___</span></label>
     <br>
     <input type="radio" id="manual" name="mode" value="manual">
     <label for="manual">manual</label>
