--- a/Block2Challenge/index.html
+++ b/Block2Challenge/index.html
@@ -20,14 +20,15 @@
     </p>
 
     <input type="radio" id="auto3" name="mode" value="auto">
-    <label for="auto3" checked="checked">auto&nbsp;&nbsp;&nbsp;&nbsp;</label>
-    <br>
-    <input type="radio" id="auto4" name="mode" value="auto">
-    <label for="auto4" checked="checked">auto<span style="opacity:0;">___</span></label>
+    <label for="auto3" checked="checked">auto&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
     <br>
     <input type="radio" id="manual" name="mode" value="manual">
     <label for="manual">manual</label>
+    <br>
+    <input type="radio" id="auto4" name="mode" value="auto">
+    <label for="auto4" checked="checked">auto<span style="opacity:0;">!!!</span></label>
     <br><br>
+    
    
     <label for="max">max:</label>
     <select id="max" name="max" onchange="validateRange('max')">
