--- a/Block2Challenge/index.html
+++ b/Block2Challenge/index.html
@@ -57,7 +57,7 @@
     <br><br>
 
     <button type="button" id="sharp" onclick="isSharp()">sharp</button> 
-    <br><br>
+    <br class="halfBr">
     <button type="button" id="flat" onclick="isFlat()">flat</button> 
     <br><br>
 
