--- a/Block2Challenge/index.html
+++ b/Block2Challenge/index.html
@@ -54,7 +54,7 @@
     <br><br>
 
     <button type="button" id="play" onclick="play()">play exercise</button> 
-    <br><br class="halfBr">
+    <br class="halfBr">
 
     <button type="button" id="sharp" onclick="isSharp()">sharp</button> 
     <br class="halfBr">
