--- a/Block2Challenge/index.html
+++ b/Block2Challenge/index.html
@@ -138,7 +138,7 @@
 
       function autoRegulate(correctness) {
         let num = Number(document.getElementById('min').value);
-        if (correctness == "correct")
+        if (correctness == "correct") {
           if (num > 5) {
             document.getElementById('min').value = num - 5;
             document.getElementById('max').value = num - 5;
@@ -147,6 +147,7 @@
             document.getElementById('min').value = num - 1;
             document.getElementById('max').value = num - 1;
           }
+        }
         else {
           if (num > 4 && num != 25) {
             document.getElementById('min').value = num + 5;
@@ -157,7 +158,6 @@
             document.getElementById('max').value = num + 1;
           }
         }
-
       }
 
       function isSharp() {
