--- a/Block2Challenge/index.html
+++ b/Block2Challenge/index.html
@@ -12,11 +12,8 @@
     <p class="description">
         This is a free resource to develop your aural sense of intonation 
         precision.<br>Deep piano notes were used to make it pleasing to the 
-        ears for sustained practice.<br>Min represents how close the second 
-        note will be from the reference pitch in cents.<br>Max represents how 
-        far away the second note will be from the reference pitch in cents.<br>
-        After pressing play, select if you think the second pitch you hear is 
-        sharp or flat.
+        ears for sustained practice.<br> After pressing play, select if you 
+        think the second pitch you hear is sharp or flat compared to the first.
     </p>
 
     <input type="radio" id="auto" name="mode" value="auto" onclick="validateRange('max')" checked>
