--- a/Block2Challenge/index.html
+++ b/Block2Challenge/index.html
@@ -61,6 +61,9 @@
     <p id="feedback"></p>
 
     <script>
+      // Updated in play(), checked in isSharp() and isFlat()
+      let globalHasAnswered = 'n';
+  
       // Updated in getSign(), used in isSharp() and isFlat()
       let globalSign = 'u'; 
 
@@ -122,6 +125,7 @@
       }
 
       function play() {
+        globalHasAnswered = 'n';
         let sign = getSign();
         let myMin = document.getElementById('min').value;
         let myMax = document.getElementById('max').value;
@@ -161,24 +165,30 @@
       }
 
       function isSharp() {
-        if (globalSign == 'p') {
-          myFeedback.textContent = 'Correct!!!';
-          if (document.getElementById("auto").checked) autoRegulate("correct");
-        }
-        else if (globalSign == 'n') {
-          myFeedback.textContent = 'incorrect :(';
-          if (document.getElementById("auto").checked) autoRegulate("incorrect");
+        if (globalHasAnswered == 'n') {
+          if (globalSign == 'p') {
+            myFeedback.textContent = 'Correct!!!';
+            if (document.getElementById("auto").checked) autoRegulate("correct");
+          }
+          else if (globalSign == 'n') {
+            myFeedback.textContent = 'incorrect :(';
+            if (document.getElementById("auto").checked) autoRegulate("incorrect");
+          }
+          globalHasAnswered = 'y';
         }
       }
 
       function isFlat() {
-        if (globalSign == 'n') {
-          myFeedback.textContent = 'Correct!!!';
-          if (document.getElementById("auto").checked) autoRegulate("correct");
-        }
-        else if (globalSign == 'p') {
-          myFeedback.textContent = 'incorrect :(';
-          if (document.getElementById("auto").checked) autoRegulate("incorect");
+        if (globalHasAnswered == 'n') {
+          if (globalSign == 'n') {
+            myFeedback.textContent = 'Correct!!!';
+            if (document.getElementById("auto").checked) autoRegulate("correct");
+          }
+          else if (globalSign == 'p') {
+            myFeedback.textContent = 'incorrect :(';
+            if (document.getElementById("auto").checked) autoRegulate("incorect");
+          }
+          globalHasAnswered = 'y';
         }
       }
       
