--- a/Block2Challenge/index.html
+++ b/Block2Challenge/index.html
@@ -137,6 +137,7 @@
         myFeedback.textContent = ''; // clear feedback
       }
 
+      // For "auto" mode. Adjusts difficulty based on success / failure
       function autoRegulate(correctness) {
         let num = Number(document.getElementById('min').value);
         if (correctness == "correct") {
@@ -164,6 +165,7 @@
         }
       }
 
+      // feedback after "sharp" button is pressed
       function isSharp() {
         if (globalHasAnswered == 'n') {
           if (globalSign == 'p') {
@@ -178,6 +180,7 @@
         }
       }
 
+      // feedback after "flat" button is pressed
       function isFlat() {
         if (globalHasAnswered == 'n') {
           if (globalSign == 'n') {
